# dagrunner

./: README.md  TESTS.md  cli_entry.py  dagrunner.code-workspace  dagrunner.json  dagrunner.py  dagrunner.spec  dagrunner_test.json  pyproject.toml
src/dagrunner/: __init__.py  __main__.py  dagrunner.schema.json  example_dagrunner.json  runner.py
tests/: __init__.py
tests/cli/: __init__.py  test_end_to_end.py  test_file_flag.py  test_placeholder_usage.py
tests/mypkg/: entry.py
tests/scripts/: hello.py
tests/tools/: compare_log.py
tests/unit/: test_dependency_skip.py  test_filters.py  test_ignore_deps_flag.py  test_init_and_load_file.py  test_interpreter_override.py  test_load_config.py  test_placeholders.py  test_placeholders_missing.py  test_run_function.py  test_run_script_shell.py  test_shell_args_kwargs.py  test_validate_config.py
