[project]
name = "dagrunner"
version = "0.1.0"
description = "Lightweight local DAG runner"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Benks-1" } ]

[project.scripts]
# Official CLI entrypoint so `pip install -e .` provides `dagrunner` command
dagrunner = "dagrunner:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
